--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-@media (min-width: 601px) {
-    .mobile-header {
-        display: none;
-    }
-}
 /* Styles généraux */
 body {
     font-family: Arial, sans-serif;
@@ -56,8 +51,8 @@ header {
 }
 
 .drapeauImage {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: auto;
 }
 
 .header-content {
@@ -89,10 +84,14 @@ img {
 .profile-picture {
     width: auto;
     height: 70px;
-    border-radius: 50%;
     float: left;
     margin-left: 15px;
     margin-right: 20px;
+
+}
+
+.left-section small{
+    margin-right: 33px;
 }
 small{
     font-size: 8px;
@@ -139,7 +138,7 @@ nav ul li a:hover {
     color: #ffca28;
 }
 
-header div h1 {
+header div div h1 {
     text-align: center;
 }
 
@@ -169,17 +168,18 @@ main {
 }
 
 .presentation {
-    display: flex;
+    display: inline;
     align-items: center;
     margin-bottom: 20px;
 }
-@media (min-width: 601px) {
-    .presentation {
-         display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-    }
+
+#presentation img {
+    max-width: 100%;
+    height: 20em; /* Définissez la hauteur maximale souhaitée */
+    width: auto;
+    margin: 0 auto;
 }
+
 .info {
     flex-grow: 1;
 }
@@ -304,13 +304,6 @@ h2{
 
 #stage .content {
     flex: 1;
-}
-
-#presentation img {
-    max-width: 600px;
-    height: 300px; /* Définissez la hauteur maximale souhaitée */
-    width: auto;
-    margin: 0 auto;
 }
 
 #presentation {
@@ -681,4 +674,50 @@ circle{
 
 .titreJauge{
     text-align: center;
+}
+.mobile-header{
+    display: flex;
+}
+
+@media only screen and (max-width: 601px) {
+    #presentation,
+    #stage,
+    #actualites{
+        display: inline;
+    }
+    #carousel{
+        display: none;
+       width: 0;
+        height: 0;
+    }
+    #presentation img,
+    #stage img{
+        max-width:80%;
+        height: auto;
+        display: flex;
+        justify-content: center; /* Centre l'image horizontalement */
+        align-items: center; /
+
+    }
+    .b{
+        display: none;
+    }
+    .navbar-toggle{
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .a ul {
+        margin-left: 30px;
+    }
+}
+@media (min-width: 601px) {
+    .a{
+        display: none;
+    }
+    .b{
+        display: flex;
+    }
+    .computer-header{
+        display: flex;
+    }
 }
