--- a/styles.css
+++ b/styles.css
@@ -764,7 +764,7 @@ circle{
     .pie{
         margin: auto;
     }
-    #presentation .imageAcceuil{
+    #presentation img{
         display: none;
     }
     #presentation #imageAAA{
